[tool.poetry]
name = "hexfrost-simplecrud"
version = "0.1.0"
description = "library with operation like (get, create, update, delete) for SQLAlchemy ORM"
authors = ["Ilia Kaziamov <kaziamov@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
