[tool.poetry]
name = "hexfrost-simplecrud"
version = "0.1.0"
description = "library with operation like (get, create, update, delete) for SQLAlchemy ORM"
authors = ["Ilia Kaziamov <kaziamov@outlook.com>"]
packages = [
    { include = "simplecrud" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
sqlalchemy = "^2.0.25"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
